Fix stars visibility in the board list

--- a/client/styles/main.styl
+++ b/client/styles/main.styl
@@ -444,6 +444,10 @@ dd {
     li {
         box-sizing: border-box;
         position: relative;
+
+        &.starred .icon-star {
+            opacity: 1;
+        }
     }
 
     a {
